# nutrition_ai

./: .gitignore  README.md  pyproject.toml
nutrition-ai/: app.json  package-lock.json  package.json
nutrition-ai/app/(tabs)/: index.tsx
