[project]
name = "nutrition-ai"
version = "0.1.0"
description = "AI-powered personalized nutrition and meal planning system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.52.0",
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "typer>=0.16.0",
    "unstructured[pdf]>=0.17.2",
    "uvicorn[standard]>=0.34.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[project.scripts]
nutrition-ai = "nutrition_ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nutrition_ai"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
